style: reformat code with prettier-plugin-java 2.7